# soc-classification-utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  soc_embedding_example.py
.github/workflows/: ci.yml
docs/: embed.md  example_data.md  guide.md  index.md  llm.md  reference.md  utils.md
src/occupational_classification_utils/data/example/: soc_4d_condensed.txt
src/occupational_classification_utils/embed/: embedding.py  soc_embedding_example.py
src/occupational_classification_utils/llm/: llm.py  llm_embedding_example.py  prompt.py
src/occupational_classification_utils/models/: response_model.py
src/occupational_classification_utils/utils/: common_utils.py  constants.py  soc_data_access.py
